--- a/Aula4_Necy.ipynb
+++ b/Aula4_Necy.ipynb
@@ -7,7 +7,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def erroab (x,y,eaX,eaY):    #absoluto\n",
+    "   eaxy=eaX+erY\n",
+    "\n",
+    "\n",
+    "def erro relativo (x,y,erX,erY):#relativo\n",
+    " erX(x/x+y)+erY(y/x+y)"
+   ]
   },
   {
    "cell_type": "code",
